--- a/demos/index.html
+++ b/demos/index.html
@@ -314,13 +314,13 @@
 	<script src="assets/jquery-1.9.1.min.js" type="text/javascript"></script>
 	<script src="../bttrmultiselect/js/bttrmultiselect.jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
-//	    var config = {
-//		'bttrmultiselect-group': {},
-//		'bttrmultiselect-no-group': {}
-//	    }
-//	    for (var selector in config) {
-//		$(selector).bttrmultiselect(config[selector]);
-//	    }
+	    var config = {
+		'bttrmultiselect-group': {},
+		'bttrmultiselect-no-group': {}
+	    }
+	    for (var selector in config) {
+		$(selector).bttrmultiselect(config[selector]);
+	    }
 	</script>
     </body>
 </html>
