adding some more methods

--- a/demos/index.html
+++ b/demos/index.html
@@ -260,7 +260,7 @@
 	    <option value="Zimbabwe">Zimbabwe</option>
         </select>
 
-	<select id="bttrmultiselect-group" data-placeholder="Your Favorite Football Team" style="width:350px;">
+	<select id="bttrmultiselect-group" data-placeholder="Your Favorite Football Team" style="width:350px;" multiple="multiple">
 	    <option value=""></option>
 	    <optgroup label="NFC EAST">
 		<option>Dallas Cowboys</option>
