some more work...

--- a/demos/index.html
+++ b/demos/index.html
@@ -3,6 +3,7 @@
     <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Insert title here</title>
+	<link rel="stylesheet" type="text/css" href="../bttrmultiselect/css/bttrmultiselect.min.css" />
     </head>
     <body>
 	<select id="bttrmultiselect-no-group" data-placeholder="Choose a Country..." style="width:350px;">
@@ -312,7 +313,7 @@
 	    </optgroup>
         </select>
 	<script src="assets/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="../bttrmultiselect/js/bttrmultiselect.jquery.min.js" type="text/javascript"></script>
+	<script src="../bttrmultiselect/js/bttrmultiselect.jquery.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	    var config = {
 		'#bttrmultiselect-group': {},
