--- a/demos/index.html
+++ b/demos/index.html
@@ -269,7 +269,7 @@
 		<option>Philadelphia Eagles</option>
 		<option>Washington Redskins</option>
 	    </optgroup>
-	    <optgroup label="NFC NORTH">
+	    <optgroup label="NFC NORTH" disabled>
 		<option>Chicago Bears</option>
 		<option>Detroit Lions</option>
 		<option>Green Bay Packers</option>
