Adding Select2 parser to the bench!

--- a/demos/bench_parser.html
+++ b/demos/bench_parser.html
@@ -18,6 +18,8 @@ and open the template in the editor.
 		<select id="nodes-1000000"></select>
 		<script src="assets/BttrMultiselectParser.js" type="text/javascript"></script>
 		<script src="assets/ChosenParser.js" type="text/javascript"></script>
+		<script src="assets/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="assets/Select2Parser.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			// http://stackoverflow.com/questions/1248302/javascript-object-size
 			function roughSizeOfObject(object) {
@@ -86,6 +88,10 @@ and open the template in the editor.
 				console.timeEnd('Chosen Parser');
 
 				//console.log(roughSizeOfObject(object), 'Kb');
+
+				console.time('Select2 Parser');
+				var object = Select2Parser.select_to_array($('#' + ids[id]));
+				console.timeEnd('Select2 Parser');
 			}
 		</script>
 	</body>
