--- a/demos/bench_parser.html
+++ b/demos/bench_parser.html
@@ -10,12 +10,20 @@ and open the template in the editor.
 	</head>
 	<body>
 		<p>Use Chrome and the console to see the bench results</p>
-		<select id="nodes-10"></select>
-		<select id="nodes-100"></select>
-		<select id="nodes-1000"></select>
-		<select id="nodes-10000"></select>
-		<select id="nodes-100000"></select>
-		<select id="nodes-1000000"></select>
+		<h2>Select with only Options</h2>
+		<select id="option-10"></select>
+		<select id="option-100"></select>
+		<select id="option-1000"></select>
+		<select id="option-10000"></select>
+		<select id="option-100000"></select>
+		<select id="option-1000000"></select>
+		<h2>Select with Groups and Options</h2>
+		<select id="group-10"></select>
+		<select id="group-100"></select>
+		<select id="group-1000"></select>
+		<select id="group-10000"></select>
+		<select id="group-100000"></select>
+		<select id="group-1000000"></select>
 		<script src="assets/BttrMultiselectParser.js" type="text/javascript"></script>
 		<script src="assets/ChosenParser.js" type="text/javascript"></script>
 		<script src="assets/jquery-1.9.1.min.js" type="text/javascript"></script>
@@ -41,10 +49,10 @@ and open the template in the editor.
 						bytes += 8;
 					}
 					else if
-							(
-									typeof value === 'object'
-									&& objectList.indexOf(value) === -1
-									)
+					(
+					typeof value === 'object'
+						&& objectList.indexOf(value) === -1
+				)
 					{
 						objectList.push(value);
 
@@ -55,22 +63,48 @@ and open the template in the editor.
 				}
 				return Math.floor(bytes / 1024);
 			}
-			var ids = ['nodes-10',
-				'nodes-100',
-				'nodes-1000',
-				'nodes-10000',
-				'nodes-100000',
+			var ids = [
+				'option-10',
+				'option-100',
+				'option-1000',
+				'option-10000',
+				'option-100000',
 				// Bad for your browser :P
-				//'nodes-1000000'
+				//'option-1000000'
+				'group-10',
+				'group-100',
+				'group-1000',
+				'group-10000',
+				'group-100000',
+				// Bad for your browser :P
+				//'option-1000000'
 			];
 			// populate selects
 			for (var id in ids) {
-				var options = parseInt(ids[id].split('-')[1]);
-				for (var i = 0; i < options; i++)
-				{
+				var type = ids[id].split('-')[0];
+				var nodes = parseInt(ids[id].split('-')[1]);
+				var addOption = function(el, key){
 					var option = document.createElement("OPTION");
-					option.innerText = i;
-					document.getElementById(ids[id]).appendChild(option);
+						option.innerText = 'option ' + key;
+						el.appendChild(option);
+				}
+				if (type === 'option'){
+					for (var i = 0; i < nodes; i++)
+					{
+						addOption(document.getElementById(ids[id]), i);
+					}
+				}
+				else if (type === 'group'){
+					for (var i = 0; i < nodes /10; i++)
+					{
+						var group = document.createElement("OPTGROUP");
+						group.label = 'group ' + i;
+						for (var j = 0; j < 10; j++)
+						{
+							addOption(group, j);
+						}
+						document.getElementById(ids[id]).appendChild(group);
+					}
 				}
 			}
 
