--- a/demos/index.html
+++ b/demos/index.html
@@ -308,6 +308,16 @@
 		<option>San Diego Chargers</option>
 	    </optgroup>
         </select>
+		
+	<select id="bttrmultiselect-disabled" disabled>
+	    <option value=""></option>
+	    <optgroup label="NFC EAST">
+		<option>Dallas Cowboys</option>
+		<option>New York Giants</option>
+		<option>Philadelphia Eagles</option>
+		<option>Washington Redskins</option>
+	    </optgroup>
+	</select>
 	<script src="assets/jquery-1.9.1.min.js" type="text/javascript"></script>
 	<script src="../bttrmultiselect/js/bttrmultiselect.jquery.js" type="text/javascript"></script>
 	<script type="text/javascript">
