--- a/demos/index.html
+++ b/demos/index.html
@@ -264,7 +264,7 @@
 	<select id="bttrmultiselect-group" data-placeholder="Your Favorite Football Team" style="width:350px;" multiple="multiple">
 	    <option value=""></option>
 	    <optgroup label="NFC EAST">
-		<option>Dallas Cowboys</option>
+		<option selected="selected">Dallas Cowboys</option>
 		<option>New York Giants</option>
 		<option>Philadelphia Eagles</option>
 		<option>Washington Redskins</option>
